# GOF_inator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: gof.cpp  gof.hpp  gof_cuda.cu  gof_cuda.hpp  gof_io.cpp  gof_io.hpp  gof_parallel.cpp  gof_parallel.hpp  gof_window.cpp  gof_window.hpp  main.cpp
